Move news post to /news/_posts

--- a/news/_posts/2016-06-12-20160612T152603-Vin d'Honneur.md
+++ b/news/_posts/2016-06-12-20160612T152603-Vin d'Honneur.md
@@ -3,7 +3,7 @@ title: "Vin d'Honneur"
 date: 2016-06-12T015:26:03UTC
 excerpt: What does it mean?
 layout: post
-categories: [article]
+categories: [other]
 tags: [independence day, vin d honneur]
 published: true
 permalink: /news/article/2016-06-12-20160612T152603
