--- a/news/_posts/2016-07-13-20160713T183023-Senate Bill 139.md
+++ b/news/_posts/2016-07-13-20160713T183023-Senate Bill 139.md
@@ -3,7 +3,7 @@ title: Sen Villar Refiles Coconut Levy Trust Fund Bill
 date: 2016-07-13T18:30:23UTC
 excerpt: Senator Cynthia Villar on 13 July refiled the measure declaring the coconut levy assets as a trust fund. The new bill tries to address loopholes and inconsistencies in the previous version, as well as providing more transparency.
 layout: post
-categories: [other]
+categories: [agriculture]
 tags: [senate bill, bill, coconut levy fund, farmers]
 published: true
 permalink: /news/other/2016-07-13-20160713T183023
