--- a/news/_posts/2016-07-30-20160730T192221-August is History Month.md
+++ b/news/_posts/2016-07-30-20160730T192221-August is History Month.md
@@ -3,10 +3,10 @@ title: August is History Month
 date: 2016-07-30T19:22:21UTC
 excerpt: Proclamation No. 339 declares August as the Philippine "History Month", repealing Proclamation No. 1304 of 1974 which made September 15-21 as Philippie "History Week". This year's theme is "Kasaysayan, Saligan ng Diwang Makabayan".
 layout: post
-categories: [article]
+categories: [other, culture]
 tags: [history, history month, history week]
 published: true
-permalink: /news/article/2016-07-30-20160730T192221
+permalink: /news/other/2016-07-30-20160730T192221
 image:
   layout: auto_width
   source: 
