Update news posts

--- a/news/_posts/2016-07-13-20160713T183023-Senate Bill 139.md
+++ b/news/_posts/2016-07-13-20160713T183023-Senate Bill 139.md
@@ -14,7 +14,10 @@ image:
 video:
   layout: top | bottom
   source: 
-  attribution: 
+  attribution:
+sources:
+  - label: Senate
+    link:
 ---
 
 Sen. Cynthia Villar filed as her first bill for the 17th Congress the measure declaring the coconut levy assets as a trust fund to benefit 3.5 million coconut farmers.
@@ -56,4 +59,4 @@ The bill seeks to make the budget of PCA distinct from the coco levy fund and sh
 Villar noted that the coconut industry has been faced by various challenges including low productivity, limited intercropping, and high poverty in the ranks of coconut farmers.
 
 According to latest data, coconut lands comprise 3.3 million hectares of the country's total farm area, higher than the 2.5 million hectares devoted to rice. Despite this, gross return per hectare was at a dismal P32,000 per farm per year.
-&#x25cf; [Senate]
+&#x25cf;
