--- a/news/_posts/2016-06-12-20160612T152603-Vin d'Honneur.md
+++ b/news/_posts/2016-06-12-20160612T152603-Vin d'Honneur.md
@@ -6,7 +6,18 @@ layout: post
 categories: [other]
 tags: [independence day, vin d honneur]
 published: true
-permalink: /news/article/2016-06-12-20160612T152603
+permalink: /news/other/2016-06-12-20160612T152603
+image:
+  layout: auto_width
+  source:
+  attribution:
+video:
+  layout: top | bottom
+  source:
+  attribution:
+Sources:
+  - label: Wikipedia
+    link: https://en.wikipedia.org/wiki/Diplomatic_corps
 ---
 
 The British New Year's Day Levee was adopted by the Americans and later by the Philippines.
@@ -29,4 +40,4 @@ A nuncio is appointed by the Holy See, which is usually an archbishop, and is th
 The diplomatic corps is the collective body of foreign diplomats which may refer to ambassadors, high commissioners, and others, who represent their countries in another state or country.
 The term is sometimes confused with the collective body of diplomats from a particular country—the proper term for which is diplomatic service.
 In some countries, the longest-serving ambassador to a country is given the title Dean of the Diplomatic Corps and is sometimes accorded a high position in the order of precedence.
-&#x25cf; [[Source](https://en.wikipedia.org/wiki/Diplomatic_corps)]
+&#x25cf;
