Rephrase news post excerpts

--- a/news/_posts/2016-07-12-20160712T152312-Charting Progress to 2020.md
+++ b/news/_posts/2016-07-12-20160712T152312-Charting Progress to 2020.md
@@ -1,7 +1,7 @@
 ---
 title: Charting Progress to 2020
 date: 2016-07-12T15:23:12UTC
-excerpt: Transcript of MVP Group of Companies chairman Manny V. Pangilinan keynote speech at the BusinessWorld Economic Forum held at the Shangri-La, The Fort, Taguig City on 12 July 2016.
+excerpt: Transcript of MVP Group of Companies chairman Manny V. Pangilinan keynote at the BusinessWorld Economic Forum held at the Shangri-La, The Fort, Taguig City on 12 July 2016.
 layout: post
 categories: [business]
 tags: [economic forum, mvp, pangilinan]
