Update posts categorized under criminality

--- a/news/_posts/2016-08-05-20160805T212421-RCBC Fined P1 Billion.md
+++ b/news/_posts/2016-08-05-20160805T212421-RCBC Fined P1 Billion.md
@@ -3,7 +3,7 @@ title: RCBC Fined P1 Billion
 date: 2016-08-05T21:24:21UTC
 excerpt: The Banko Sentral ng Pilipinas approved the penalty imposed against Rizal Commercial Banking Corporation after its involvement in the Bangladesh money laudering scam.
 layout: post
-categories: [top, business]
+categories: [top, business, criminality]
 tags: [bsp, rcbc, bangladesh, sri lanka, bank heist, money laudering]
 published: true
 permalink: /news/business/2016-08-05-20160805T212421
