Update news post

--- a/news/_posts/2016-09-03-20160903T070609-Davao Bombing.md
+++ b/news/_posts/2016-09-03-20160903T070609-Davao Bombing.md
@@ -53,6 +53,8 @@ The President added, "I am inviting now the Armed Forces of the Philippines, the
 Duterte cited that this is not the first time Davao was under the same acts of violence.
 He was referring to the twin bombings of 2003 that occured in the Davao airport and the Sasa Wharf that took 39 lives and injured 199 people.
 
+In 2003, former president Gloria Macapagal Arroyo declared a state of lawlessness following the twin bombings in Davao but confined the scope within the Davao region.
+
 The President said, "Government is here with you, as humanly as possible. We will protect everybody... So we also ask the citizens to do their part of being vigilant."
 
 At mid-morning Saturday, the spokesman for the office of the President, Ernesto Abella, issued a statement explaining the basis of the declaration:
