Update recently added news posts

--- a/news/_posts/2016-10-07-20161007T103120-Banana Congress 2016.md
+++ b/news/_posts/2016-10-07-20161007T103120-Banana Congress 2016.md
@@ -1,10 +1,9 @@
 ---
 title: Banana Congress 2016
 date: 2016-10-07T10:31:20UTC
-excerpt: President Rodrigo Roa Duterte attends the Banana Congress 2016 "New Frontiers for Inclusive Industry Growth" together with Agriculture Secretary Emmanuel Pinol at SMX Convention Centre, SM Lanang Premier, Davao City
-on 7 October 2016.
+excerpt: "President Rodrigo Roa Duterte attends the Banana Congress 2016 together with Agriculture Secretary Emmanuel Pinol at SMX Davao Convention Centre, Davao City on 7 October 2016."
 layout: post
-categories: [other]
+categories: [business]
 tags: [banana congress, president]
 published: true
 permalink: /news/20161007T103120
