--- a/news/_posts/2016-10-04-20161004T210756-Rosh Hashanah 2016.md
+++ b/news/_posts/2016-10-04-20161004T210756-Rosh Hashanah 2016.md
@@ -3,8 +3,8 @@ title: Rosh Hashanah 2016
 date: 2016-10-04T21:07:56UTC
 excerpt: President Rodrigo Roa Duterte celebrated the Jewish New Year, also known as Rosh Hashanah, with the Jewish community at the Beit Yaacov Synagogue in Makati City on 4 October 2016.
 layout: post
-categories: [other]
-tags: [jewish community, president]
+categories: [president, foreign affairs]
+tags: [rosh hashanah, jewish new year, jewish community]
 published: false
 permalink: /news/20161004T210756
 image:
