--- a/news/_posts/2016-10-07-20161007T103120-Banana Congress 2016.md
+++ b/news/_posts/2016-10-07-20161007T103120-Banana Congress 2016.md
@@ -3,8 +3,8 @@ title: Banana Congress 2016
 date: 2016-10-07T10:31:20UTC
 excerpt: "President Rodrigo Roa Duterte attends the Banana Congress 2016 together with Agriculture Secretary Emmanuel Pinol at SMX Davao Convention Centre, Davao City on 7 October 2016."
 layout: post
-categories: [business]
-tags: [banana congress, president]
+categories: [president, business]
+tags: [banana congress, panama disease]
 published: true
 permalink: /news/20161007T103120
 image:
