Update published meta data state

--- a/news/_posts/2016-10-04-20161004T210756-Rosh Hashanah 2016.md
+++ b/news/_posts/2016-10-04-20161004T210756-Rosh Hashanah 2016.md
@@ -5,7 +5,7 @@ excerpt: President Rodrigo Roa Duterte celebrated the Jewish New Year, also know
 layout: post
 categories: [president, foreign affairs]
 tags: [rosh hashanah, jewish new year, jewish community]
-published: false
+published: true
 permalink: /news/20161004T210756
 image:
   layout: auto_width
