Update news posts category from 'criminality' to 'law_and_order'

--- a/news/_posts/2016-10-19-U.S. Embassy Protest Turned Violent.md
+++ b/news/_posts/2016-10-19-U.S. Embassy Protest Turned Violent.md
@@ -3,7 +3,7 @@ title: U.S. Embassy Protest Turned Violent
 date: 2016-10-19T06:26:49UTC
 excerpt: A rally of indigenous protesters on 19 October 2016 at the United States embassy in Ermita, Manila turned violent. The protesters were demanding an end to the presence of U.S. troops in the country.
 layout: post
-categories: [criminality, pnp]
+categories: [law_and_order, pnp]
 tags: [us embassy, rally, protest, left wing]
 published: true
 redirect_from: /news/20161019T062649
