Update news post tags

--- a/news/_posts/2016-12-31-120th Rizal Day.md
+++ b/news/_posts/2016-12-31-120th Rizal Day.md
@@ -4,7 +4,7 @@ date: 2016-12-31T05:24:35UTC
 excerpt: The President led the commemoration rites of Rizal Day on 30 December 2016 at 7:00 a.m. at the Rizal National Monument, Rizal Park, Manila.
 layout: post
 categories: [president]
-tags: [Jose Riza, Rizal Day, Rizal Shrine, martyrdom]
+tags: [Jose Rizal, Rizal Day, Rizal Shrine, martyrdom]
 published: true
 permalink: /news/ol7Rk4r5nzk3q5j
 image:
