Fix use of center heading text in posts

--- a/_posts/info/law/2016-06-05-Republic Act 10895.md
+++ b/_posts/info/law/2016-06-05-Republic Act 10895.md
@@ -20,15 +20,15 @@ sources:
 
 H. No. 5844
 
-###### Republic of the Philippines
+##### Republic of the Philippines
 
-###### Congress of the Philippines
+##### Congress of the Philippines
 
-###### Metro Manila
+##### Metro Manila
 
-###### Sixteenth Congress
+##### Sixteenth Congress
 
-###### Third Regular Session
+##### Third Regular Session
 
 Begun and held in Metro Manila, on Monday, the twenty-seventh day of July, two thousand fifteen.
 
