--- a/_posts/info/org/2016-06-05-AIIB.md
+++ b/_posts/info/org/2016-06-05-AIIB.md
@@ -18,7 +18,7 @@ sources:
     link: http://www.aiib.org/
 ---
 
-##### Wikipedia[^1]:
+## Wikipedia[^1]:
 
 The Asian Infrastructure Investment Bank (AIIB) is an international financial institution that aims to support the building of infrastructure in the Asia-Pacific region. The bank has 57 member states (all "Founding Members") and was proposed as an initiative by the government of China. The initiative gained support from 37 regional and 20 non-regional Prospective Founding Members (PFM), all of which have signed the Articles of Agreement that form the legal basis for the bank. The bank started operation after the agreement entered into force on 25 December 2015, after ratifications were received from 10 member states holding a total number of 50% of the initial subscriptions of the Authorized Capital Stock. Major economies that did not become PFM include the G7/G8 members' Japan and the United States, although Canada was accepted on 23 September 2016.
 
@@ -26,7 +26,7 @@ The United Nations has addressed the launch of AIIB as having potential for "sca
 
 The bank was proposed by China in 2013 and the initiative was launched at a ceremony in Beijing in October 2014.
 
-##### From AIIB Website[^2]:
+## From AIIB Website[^2]:
 
 The Asian Infrastructure Investment Bank (AIIB) is a multilateral development bank (MDB) conceived for the 21st century. Through a participatory process, its founding members are developing its core philosophy, principles, policies, value system and operating platform. The Bank's foundation is built on the lessons of experience of existing MDBs and the private sector. Its modus operandi will be lean, clean and green: lean, with a small efficient management team and highly skilled staff; clean, an ethical organization with zero tolerance for corruption; and green, an institution built on respect for the environment. The AIIB will put in place strong policies on governance, accountability, financial, procurement and environmental and social frameworks.
 
