--- a/_posts/info/org/2016-06-05-APEC.md
+++ b/_posts/info/org/2016-06-05-APEC.md
@@ -50,7 +50,7 @@ As of 2016, APEC has 21 members. The word 'economies' is used to describe APEC m
 | The United States | 6-7 November 1989
 | Viet Nam | 14-15 November 1998
 
-#### History
+## History
 
 The idea of APEC was firstly publicly broached by former Prime Minister of Australia Bob Hawke during a speech in Seoul, Korea on 31 January 1989. Ten months later, 12 Asia-Pacific economies met in Canberra, Australia to establish APEC. The founding members were: Australia, Brunei Darussalam, Canada, Indonesia, Japan, Korea, Malaysia, New Zealand, the Philippines, Singapore, Thailand and the United States.
 
@@ -58,7 +58,7 @@ China, Hong Kong, China and Chinese Taipei joined in 1991. Mexico and Papua New 
 
 Between 1989 and 1992, APEC met as an informal senior official and Ministerial level dialogue. In 1993, former United States President Bill Clinton, established the practice of an annual APEC Economic Leaders' Meeting to provide greater strategic vision and direction to cooperation in the region.
 
-##### Key APEC Milestones
+## Key APEC Milestones
 
 **2015 - Manila, the Philippines**
 
