--- a/_posts/info/org/2016-06-05-JCIP.md
+++ b/_posts/info/org/2016-06-05-JCIP.md
@@ -28,7 +28,7 @@ By 1948, eleven new chapters were organized in key cities: Cebu, San Pablo, Baco
 The first national convention was held February 11-13, 1949 at the Manila Hotel.
 The former Honorable Ramon V. del Rosario, Sr. was elected the first National President.
 
-##### Philippine Jaycees Landmark Programs
+## Philippine Jaycees Landmark Programs
 
 The JCI Philippines (Philippine Jaycees) initiated, organized and continues to confer among the most prestigious awards in the Philippines namely:
 
