--- a/_posts/news/law_and_order/2016-10-19-U.S. Embassy Protest Turned Violent.md
+++ b/_posts/news/law_and_order/2016-10-19-U.S. Embassy Protest Turned Violent.md
@@ -37,7 +37,7 @@ A policeman tried driving the vehicle out and in the process rammed protesters a
 
 In the video, the police tried stopping vehicles to arrest protesters inside.
 
-##### Police vehicle ramming protesters
+## Police vehicle ramming protesters
 
 The police vehicle that was being beaten with wooden batons could be seen here where it rammed a crowd of protesters.
 
