Update info content formatting

--- a/_posts/info/law/2016-06-05-Republic Act 10895.md
+++ b/_posts/info/law/2016-06-05-Republic Act 10895.md
@@ -20,21 +20,21 @@ sources:
 
 H. No. 5844
 
-##### Republic of the Philippines
+###### Republic of the Philippines
 
-##### Congress of the Philippines
+###### Congress of the Philippines
 
-##### Metro Manila
+###### Metro Manila
 
-##### Sixteenth Congress
+###### Sixteenth Congress
 
-##### Third Regular Session
+###### Third Regular Session
 
 Begun and held in Metro Manila, on Monday, the twenty-seventh day of July, two thousand fifteen.
 
-[REPUBLIC ACT NO. 10895]
+##### [REPUBLIC ACT NO. 10895]
 
-AN ACT GRANTING THE AVOCADO BROADBAND TELECOMS, INC. A FRANCHISE TO CONSTRUCT, INSTALL, ESTABLISH, OPERATE AND MAINTAIN TELECOMMUNICATIONS SYSTEMS THROUGHOUT THE PHILIPPINES
+###### AN ACT GRANTING THE AVOCADO BROADBAND TELECOMS, INC. A FRANCHISE TO CONSTRUCT, INSTALL, ESTABLISH, OPERATE AND MAINTAIN TELECOMMUNICATIONS SYSTEMS THROUGHOUT THE PHILIPPINES
 
 Be it enacted by the Senate and House of Representatives of the Philippines in Congress assembled:
 
@@ -95,27 +95,27 @@ of this Act. Upon giving such acceptance, the grantee shall exercise the privile
 
 Approved,
 
-FRANKLIN M. DRILON<br/>
-President of the Senate<br/>
+FRANKLIN M. DRILON<br>
+President of the Senate<br>
 
-FELICIANO BELMONTE JR.<br/>
-Speaker of the House of Representatives<br/>
+FELICIANO BELMONTE JR.<br>
+Speaker of the House of Representatives<br>
 
 This Act which originated in the House of Representatives was passed by the House of Representatives on October 9, 2015, amended by the Senate on February 1,2016, and which amendment was concurred in by the House of Representatives on May 23, 2016.
 
 OSCAR G. YABES<br/>
-Secretary of the Senate<br/>
+Secretary of the Senate<br>
 
-MARILYN B. BARUA-YAP<br/>
-Secretary General<br/>
-House of Representatives<br/>
+MARILYN B. BARUA-YAP<br>
+Secretary General<br>
+House of Representatives<br>
 
 Approved:
 
-BENIGNO S. AQUINO III<br/>
+BENIGNO S. AQUINO III<br>
 President of the Philippines
 
-**Lapsed into law on JUL 21 2018<br/>
-Without the signature of the President,<br/>
+**Lapsed into law on JUL 21 2018<br>
+Without the signature of the President,<br>
 In accordance with Article VI, Section 27 (1) of the Constitution**.
 &#x25cf;
