Update info post tag case

--- a/_posts/info/law/2016-06-05-Republic Act 6657.md
+++ b/_posts/info/law/2016-06-05-Republic Act 6657.md
@@ -4,7 +4,7 @@ date: 2017-01-18T06:13:20UTC
 excerpt: The Comprehensive Agrarian Reform Law signed by President Corazon C. Aquino on June 10, 1988 aims to promote social justice and industrialization, providing mechanisms for its implementation, and other purposes.
 layout: post
 categories: [info, law]
-tags: [republic act 6657, Comprehensive Agrarian Reform Program, CARP, republic act]
+tags: [Republic Act 6657, Comprehensive Agrarian Reform Program, CARP, Republic Act]
 published: true
 permalink: /info/law/GpN1yLXGPdjQ4vz
 image:
