Update info post title

--- a/_posts/info/gov/2016-06-05-PARC.md
+++ b/_posts/info/gov/2016-06-05-PARC.md
@@ -1,5 +1,5 @@
 ---
-title: Info Post
+title: Presidential Agrarian Reform Council (PARC)
 date: 2017-01-18T13:45:54UTC
 excerpt: Executive Order No. 229 titled Providing the Mechanism for the Implementation of the Comprehensive Agrarian Reform Program was signed by President Corazon C. Aquino on 22 July 22 1987 and creating the Presidential Agrarian Reform Council.
 layout: post
