Update info post title using double quotes

--- a/_posts/info/law/2016-06-05-Republic Act 8491.md
+++ b/_posts/info/law/2016-06-05-Republic Act 8491.md
@@ -1,7 +1,7 @@
 ---
 title: Republic Act No. 8491
 date: 2017-01-24T03:07:53UTC
-excerpt: Republic Act No. 8491 or otherwise known as the \"Flag and Heraldic Code of the Philippines\" was signed into law on 12 February 1998 by President Fidel V. Ramos.
+excerpt: "Republic Act No. 8491 or otherwise known as the \"Flag and Heraldic Code of the Philippines\" was signed into law on 12 February 1998 by President Fidel V. Ramos."
 layout: post
 categories: [info, law]
 tags: [Republic Act 8491, Flag and Heraldic Code of the Philippines, National Flag, National Anthem National Motto, National Coat-of-Arms, Republic Act]
@@ -10,8 +10,8 @@ permalink: /info/mzGR96glXok3N9p
 thumbnail:
 image:
   layout: none | auto_width
-  source: 
-  attribution: 
+  source:
+  attribution:
 sources:
   - label: Official Gazette of the Republic of the Philippines
     link: http://www.gov.ph/1998/02/12/republic-act-no-8491/
