Update info posts

--- a/_posts/info/law/2016-06-05-Republic Act 10895.md
+++ b/_posts/info/law/2016-06-05-Republic Act 10895.md
@@ -17,24 +17,11 @@ sources:
     link: https://www.senate.gov.ph/lisdata/2250319210!.pdf
 ---
 
+An Act granting the Avocado Broadband Telecoms, Inc. a franchise to construct, install, establish, operate and maintain telecommunications systems throughout the Philippines.
 
-H. No. 5844
+##### Republic Act No. 10895
 
-##### Republic of the Philippines
-
-##### Congress of the Philippines
-
-##### Metro Manila
-
-##### Sixteenth Congress
-
-##### Third Regular Session
-
-Begun and held in Metro Manila, on Monday, the twenty-seventh day of July, two thousand fifteen.
-
-##### [REPUBLIC ACT NO. 10895]
-
-###### AN ACT GRANTING THE AVOCADO BROADBAND TELECOMS, INC. A FRANCHISE TO CONSTRUCT, INSTALL, ESTABLISH, OPERATE AND MAINTAIN TELECOMMUNICATIONS SYSTEMS THROUGHOUT THE PHILIPPINES
+###### An Act Granting the Avocado Broadband Telecoms, Inc. a Franchise to Construct, Install, Establish, Operate and Maintain Telecommunications Systems Throughout the Philippines
 
 Be it enacted by the Senate and House of Representatives of the Philippines in Congress assembled:
 
