--- a/_posts/info/law/2016-06-05-Republic Act 8491.md
+++ b/_posts/info/law/2016-06-05-Republic Act 8491.md
@@ -18,6 +18,8 @@ sources:
 related:
 ---
 
+Republic Act No. 8491 or otherwise known as the "Flag and Heraldic Code of the Philippines" was signed into law on 12 February 1998 by President Fidel V. Ramos.
+
 ##### REPUBLIC ACT NO. 8491
 
 ###### AN ACT PRESCRIBING THE CODE OF THE NATIONAL FLAG, ANTHEM, MOTTO, COAT-OF-ARMS AND OTHER HERALDIC ITEMS AND DEVICES OF THE PHILIPPINES.
