Update info posts

--- a/_posts/info/law/2016-06-05-Republic Act 9700.md
+++ b/_posts/info/law/2016-06-05-Republic Act 9700.md
@@ -15,7 +15,7 @@ sources:
   - label: Department of Agrarian Reform
     link: http://www.dar.gov.ph/ra-9700-carper-comprehensive-agrarian-reform-program-extension
   - label: Official Gazette of the Republic of the Philippines
-  - link: http://www.gov.ph/2009/08/07/republic-act-no-9700/
+    link: http://www.gov.ph/2009/08/07/republic-act-no-9700/
 related:
 ---
 
